added stop and wait

--- a/.gitignore
+++ b/.gitignore
@@ -107,5 +107,5 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
-# Editor-based Rest Client
+# Editor-based Rest ServerPack
 .idea/httpRequests
